--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 
 .sectn3{
-    background: url(/img/ho.jpg);
+    background: url(./img/ho.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -84,7 +84,7 @@ position: absolute;
 .section2 {
     width: 100%;
     height: 500px;
-    background-image: url(/img/wave.svg);
+    background-image: url(./img/wave.svg);
     background-size: cover;
     margin-bottom: 80px;
 }
@@ -151,7 +151,7 @@ position: absolute;
 
 .section3{
     
-    background: url(/img/ho.jpg);
+    background: url(./img/ho.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -161,7 +161,7 @@ position: absolute;
 .section1 {
     width: 100%;
     height: 500px;
-    background-image: url(/img/ddd.png);
+    background-image: url(./img/ddd.png);
     background-size: cover;
 
     display: flex;
