--- a/style.css
+++ b/style.css
@@ -37,39 +37,44 @@ body {
 /*section1*/
 
 
-.sectn3{
-    background: url(/img/ho.jpg);
+.sectn3 {
+    background: url(./img/ho.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 500px;
 }
-.transparent{
+
+.transparent {
     width: 100%;
     height: 500px;
     background-color: rgba(0, 0, 0, 0.719);
     position: relative;
 }
-.section1-box{
 
-width: 700px;
-height: 300px;
+.section1-box {
 
-margin-left: 10% ;
-margin-top: 5%;
-position: absolute;
+    width: 700px;
+    height: 300px;
+
+    margin-left: 10%;
+    margin-top: 5%;
+    position: absolute;
 }
-.section1-box h1{
-    color:white;
+
+.section1-box h1 {
+    color: white;
     margin: 0px;
     font-size: 40px;
 
 }
+
 .section1-box p {
-    color:rgba(255, 255, 255, 0.315);
+    color: rgba(255, 255, 255, 0.315);
     text-align: justify;
 }
-#lol{
+
+#lol {
     margin-left: 0px;
 }
 
@@ -84,7 +89,7 @@ position: absolute;
 .section2 {
     width: 100%;
     height: 500px;
-    background-image: url(/img/wave.svg);
+    background-image: url(./img/wave.svg);
     background-size: cover;
     margin-bottom: 80px;
 }
@@ -144,14 +149,14 @@ position: absolute;
 
 /*section1*/
 
-.sectn{
+.sectn {
     width: 100%;
     height: 500px;
 }
 
-.section3{
-    
-    background: url(/img/ho.jpg);
+.section3 {
+
+    background: url(./img/ho.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -161,7 +166,7 @@ position: absolute;
 .section1 {
     width: 100%;
     height: 500px;
-    background-image: url(/img/ddd.png);
+    background-image: url(./img/ddd.png);
     background-size: cover;
 
     display: flex;
@@ -234,6 +239,7 @@ button {
     z-index: 2;
     border-radius: 3px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 button::before {
@@ -252,4 +258,17 @@ button::before {
 button:hover::before {
     border-radius: 0px 0px 50% 50%;
     height: 150%;
+}
+
+
+
+
+/*section4*/
+
+.section4 {
+
+width: 100%;
+height: 500px;
+background-color: #ddd;
+
 }
