--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@ body {
     height: 500px;
     background-image: url(./img/wave.svg);
     background-size: cover;
-    margin-bottom: 80px;
+    
+
 }
 
 .boxerbap {
@@ -230,16 +231,19 @@ button a {
 button {
     padding: 8px 54px;
     background-color: tomato;
-    color: wheat;
     font-size: 16px;
     border: none;
     font-weight: bold;
-
+    transition: 0.5s;
     position: relative;
     z-index: 2;
     border-radius: 3px;
     overflow: hidden;
     cursor: pointer;
+    border: 1px solid tomato;
+}
+button:hover a{
+    color: tomato;
 }
 
 button::before {
@@ -248,8 +252,7 @@ button::before {
     top: -50%;
     left: 0px;
     transition: 0.6s;
-    background-color: black;
-
+    background-color: white;
     height: 0%;
     z-index: -1;
     width: 100%;
@@ -269,6 +272,16 @@ button:hover::before {
 
 width: 100%;
 height: 500px;
-background-color: #ddd;
+background-image: url(./img/ooo.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+
+}
+.al{
+
+    width: 100%;
+    height: 500px;
+    background-color:rgba(0, 0, 0, 0.548)
+
 
 }
